--- a/Angular/Exam/package.json
+++ b/Angular/Exam/package.json
@@ -1,10 +1,9 @@
 {
-  "name": "routing-demo",
+  "name": "exam",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
